Document usage of jlink